fixed spacing

--- a/css/index.css
+++ b/css/index.css
@@ -38,6 +38,7 @@ body {
   background-color: #ffffff;
   position: relative;
   padding-left: 20px;
+  margin-bottom:30px;
 }
 
 #abouttext {
